dist/1.0/bin/sample/retrieveUnpackaged/objects/Address__c.object
<CustomObject>
    <description>Addresses for Account and Contact objects</description>
    <fields>
        <fullName>Apartment_No__c</fullName>
        <description>Number of Apartment.</description>
        <inlineHelpText>Number of Apartment.</inlineHelpText>
        <label>Apartment No</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Block__c</fullName>
        <description>Number of Building.</description>
        <inlineHelpText>Number of Building.</inlineHelpText>
        <label>Building/Block</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Part__c</fullName>
        <description>Part of the City</description>
        <inlineHelpText>Part of the City</inlineHelpText>
        <label>City Part</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Name of the City.</description>
        <inlineHelpText>Name of the City.</inlineHelpText>
        <label>City</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Coordinate_X__c</fullName>
        <description>Coordinate X</description>
        <inlineHelpText>Coordinate X</inlineHelpText>
        <label>Coordinate X</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coordinate_Y__c</fullName>
        <description>Coordinate Y</description>
        <inlineHelpText>Coordinate Y</inlineHelpText>
        <label>Coordinate Y</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Name of the Country.</description>
        <inlineHelpText>Name of the Country.</inlineHelpText>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Aaland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia And Herzegowina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <description>Number of floor in building.</description>
        <inlineHelpText>Number of floor in building.</inlineHelpText>
        <label>Floor</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Timestamp__c</fullName>
        <description>Stores information when this Address has been last modified by integration.</description>
        <inlineHelpText>Stores information when this Address has been last modified by integration.</inlineHelpText>
        <label>Integration Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Locality__c</fullName>
        <description>Address Locality</description>
        <inlineHelpText>Address Locality</inlineHelpText>
        <label>Locality</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSS_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>ID from OSS System</description>
        <externalId>true</externalId>
        <inlineHelpText>ID from OSS System</inlineHelpText>
        <label>OSS ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>Postal Code of City.</description>
        <inlineHelpText>Postal Code of City.</inlineHelpText>
        <label>Postal Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room_No__c</fullName>
        <description>Room Number.</description>
        <inlineHelpText>Room Number.</inlineHelpText>
        <label>Room No</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>If this address has been migrated or created from other system this filed is storing it&apos;s ID in original system.</description>
        <externalId>true</externalId>
        <inlineHelpText>If this address has been migrated or created from other system this filed is storing it&apos;s ID in original system.</inlineHelpText>
        <label>Source Record Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Staircase__c</fullName>
        <description>Number of staircase in building.</description>
        <inlineHelpText>Number of staircase in building.</inlineHelpText>
        <label>Staircase</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <description>State or Province where City is located.</description>
        <inlineHelpText>State or Province where City is located.</inlineHelpText>
        <label>State/Province</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_1__c</fullName>
        <description>First line describing street.</description>
        <inlineHelpText>First line describing street.</inlineHelpText>
        <label>Street 1</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <description>Second line describing street.</description>
        <inlineHelpText>Second line describing street.</inlineHelpText>
        <label>Street 2</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_No_Orientation__c</fullName>
        <description>Orientational Street Number</description>
        <inlineHelpText>Orientational Street Number</inlineHelpText>
        <label>Street No (Orientation)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_No__c</fullName>
        <label>Street No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>OSS_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OSS_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Address Entry</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <recordTypes>
        <fullName>Address</fullName>
        <active>true</active>
        <description>Addresses that can be modified</description>
        <label>Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Address_OSS</fullName>
        <active>true</active>
        <description>Addresses that can not be modified</description>
        <label>Address OSS</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>